--- a/style.css
+++ b/style.css
@@ -26,9 +26,20 @@
     list-style: none;
     display: inline-block;
     margin: 0 20px;
+    position: relative;
 }
 .navbar ul li a{
     text-decoration: none;
     color: #fff;
     text-transform: uppercase;
+}
+.navbar ul li::after{
+    content: '';
+    height: 3px;
+    width: 100%;
+    background: #009688;
+    position: absolute;
+    left: 0;
+    bottom: -10px;
+
 }
